--- a/src/Flow.Launcher.Plugin.Azan.csproj
+++ b/src/Flow.Launcher.Plugin.Azan.csproj
@@ -34,4 +34,9 @@
 	  <PackageReference Include="newtonsoft.json" Version="13.0.3" />
     <PackageReference Include="ModernWpfUI" Version="0.9.6" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Device">
+      <HintPath>C:\Users\mohammed\Desktop\System.Device_dll_c6d9f36a100f5f67ce3d4badb18bc8e6\System.Device.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
