--- a/src/Flow.Launcher.Plugin.Azan.csproj
+++ b/src/Flow.Launcher.Plugin.Azan.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Device">
-      <HintPath>C:\Users\mohammed\Desktop\System.Device_dll_c6d9f36a100f5f67ce3d4badb18bc8e6\System.Device.dll</HintPath>
+      <HintPath>..\System.Device.dll</HintPath>
     </Reference>
     <PackageReference Include="Flow.Launcher.Plugin" Version="4.3.0" />
   </ItemGroup>
